--- a/main.ipynb
+++ b/main.ipynb
@@ -1326,6 +1326,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Insights"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## ¿Cuál es la distribución de medallas por país?"
    ]
   },
