--- a/main.ipynb
+++ b/main.ipynb
@@ -1568,6 +1568,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Observations\n",
+    "\n",
+    "- **The United States** is the country with the highest number of medals across all categories (gold, silver, and bronze), solidifying its position as the top Olympic power.\n",
+    "\n",
+    "- **The Soviet Union** (considering historical data) remains one of the most successful countries in Olympic history, especially in gold medals.\n",
+    "\n",
+    "- **Germany** ranks third in gold medals and shows consistent performance across all categories, highlighting its strong presence in the Olympics.\n",
+    "\n",
+    "- **Great Britain**, **France**, and **Italy** are other European countries that stand out, each with a significant number of medals in all categories, reflecting their rich Olympic traditions.\n",
+    "\n",
+    "- **Australia** and **Canada** show solid performances, especially in bronze and silver medals, underscoring their focus on high-performance sports.\n",
+    "\n",
+    "- **Hungary** stands out as a smaller country compared to others on the list but with a notable number of medals, demonstrating its effectiveness in specific sports.\n",
+    "\n",
+    "The bar chart visually illustrates these conclusions, allowing for a clear comparison between different countries and types of medals."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## How has the participation of women in the Olympic Games evolved over the years?\n",
     "\n",
     "We create dataframes for men and women and perform data segmentation, as well as the segmentation of Winter and Summer Olympic Games.\n"
@@ -1615,6 +1636,24 @@
     "sns.histplot(data=females_winter, x='Year', bins=35, kde=True) \n",
     "sns.histplot(data=females_summer, x='Year', bins=35, kde=True) \n",
     "plt.title('Female participation')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Observations:\n",
+    "- **Summer Olympics Participation**: Female participation in the Summer Olympics has steadily increased, especially since the mid-20th century.\n",
+    "\n",
+    "- **Winter Olympics Participation**: Female participation in the Winter Olympics has also grown, though the increase is less pronounced compared to the Summer Games.\n",
+    "\n",
+    "### Conclusions:\n",
+    "\n",
+    "- **Overall Increase**: There has been a significant rise in female participation in both the Summer and Winter Olympics over time.\n",
+    "\n",
+    "- **Seasonal Difference**: The Summer Olympics consistently have higher female participation than the Winter Olympics.\n",
+    "\n",
+    "- **Historical Impact**: The inclusion of more female events and the overall expansion of the Olympics have driven this growth.\n"
    ]
   },
   {
@@ -1688,6 +1727,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Observations:\n",
+    "- **Summer Sports**: The scatter plot for the top 3 most common women's sports in the Summer Olympics shows the distribution of height and weight among athletes. Each sport tends to have athletes with different physical profiles, highlighting the diversity in body types required for different sports.\n",
+    "  \n",
+    "- **Winter Sports**: Similarly, the scatter plot for Winter Olympics sports shows distinct clusters for each sport, indicating that different sports demand specific physical attributes.\n",
+    "\n",
+    "### Conclusions:\n",
+    "- **Sport-Specific Physical Profiles**: Both in Summer and Winter Olympics, the top sports have athletes with varied physical characteristics, tailored to the demands of their respective sports.\n",
+    "\n",
+    "- **Diversity in Athletics**: The variation in height and weight across sports underscores the diverse nature of athletic requirements in the Olympics, where each sport attracts athletes with unique physical builds.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Hombres"
    ]
   },
@@ -1739,6 +1793,21 @@
     "plt.show()\n",
     "sns.scatterplot(data=male_winter_top_3_sports_dataframe, x='Height', y='Weight', hue='Sport', alpha=0.5)\n",
     "plt.title('Men - Winter')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Observations:\n",
+    "- **Summer Sports**: The scatter plot for the top 3 most common men's sports in the Summer Olympics shows distinct clusters of height and weight for different sports, indicating the varied physical demands of each sport.\n",
+    "  \n",
+    "- **Winter Sports**: Similarly, the scatter plot for Winter Olympics sports shows clear groupings by sport, with each sport having athletes with specific physical profiles.\n",
+    "\n",
+    "### Conclusions:\n",
+    "- **Sport-Specific Physical Profiles**: Just like in women's sports, men's sports also require specific physical attributes, with notable differences between the top sports in both the Summer and Winter Olympics.\n",
+    "\n",
+    "- **Diversity in Physical Requirements**: The variation in height and weight across the top sports highlights the diversity of physical builds necessary for success in different Olympic events.\n"
    ]
   },
   {
@@ -1801,6 +1870,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Results:\n",
+    "The top 10 most common sports in the dataset are:\n",
+    "\n",
+    "1. **Athletics**: 38,624 entries\n",
+    "2. **Gymnastics**: 26,707 entries\n",
+    "3. **Swimming**: 23,195 entries\n",
+    "4. **Shooting**: 11,448 entries\n",
+    "5. **Cycling**: 10,859 entries\n",
+    "6. **Fencing**: 10,735 entries\n",
+    "7. **Rowing**: 10,595 entries\n",
+    "8. **Cross Country Skiing**: 9,133 entries\n",
+    "9. **Alpine Skiing**: 8,829 entries\n",
+    "10. **Wrestling**: 7,154 entries\n",
+    "\n",
+    "### Conclusions:\n",
+    "- **Age Distribution by Sport and Gender**: The boxplot shows the distribution of ages among medalists across the top 10 sports, divided by gender. There are noticeable differences in the median age depending on the sport, with some sports favoring younger athletes (e.g., Gymnastics) and others showing a broader age range (e.g., Shooting, Fencing).\n",
+    "\n",
+    "- **Gender Differences**: The plot also reveals gender-based differences in the age distribution within the same sport, suggesting that the peak performance age might vary between men and women in these sports.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Emerging Countries in Recent Olympic Games in Terms of Medals Won, Segmented by Season\n"
    ]
   },
@@ -1821,7 +1914,6 @@
     }
    ],
    "source": [
-    "# Filtrar los datos de los últimos Juegos Olímpicos\n",
     "recent_games_summer = df[(df['Year'] >= 2000) & (df['Medal'] != 'No Medal') & (df['Season'] == 'Summer')]\n",
     "\n",
     "medals_by_country_recent_summer_season = recent_games_summer.groupby(['Year', 'Team']).size().reset_index(name='Medal Count')\n",
@@ -1837,6 +1929,19 @@
     "plt.legend(title='Country', bbox_to_anchor=(1.05, 1), loc='upper left')\n",
     "plt.show()\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conclusions:\n",
+    "\n",
+    "- **Consistent Dominance**: Certain countries, such as the United States and China, frequently appear among the top 10, indicating their consistent dominance in the Summer Olympics.\n",
+    "\n",
+    "- **Yearly Variation**: The number of medals won by each country can vary significantly from year to year, reflecting changes in athletic performance, investment in sports, and other factors.\n",
+    "\n",
+    "- **Diverse Representation**: While some countries are consistently at the top, the top 10 list for each year also shows diversity, with different nations making significant impacts in different Olympic years.\n"
    ]
   },
   {
@@ -1856,7 +1961,6 @@
     }
    ],
    "source": [
-    "# Filter data from the most recent Olympic Games\n",
     "recent_games_winter = df[(df['Year'] >= 2000) & (df['Medal'] != 'No Medal') & (df['Season'] == 'Winter')]\n",
     "\n",
     "medals_by_country_recent_winter_season = recent_games_winter.groupby(['Year', 'Team']).size().reset_index(name='Medal Count')\n",
@@ -1871,6 +1975,18 @@
     "plt.ylabel('Medal Count')\n",
     "plt.legend(title='Country', bbox_to_anchor=(1.05, 1), loc='upper left')\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conclusions:\n",
+    "- **Consistent Leaders**: Certain countries, such as Norway, Germany, and the United States, frequently rank among the top 10, demonstrating their strong performances in Winter Olympic sports.\n",
+    "\n",
+    "- **Yearly Shifts**: The chart reveals fluctuations in medal counts across different years, suggesting changes in the competitive landscape of Winter sports.\n",
+    "\n",
+    "- **Regional Dominance**: European countries are prominently featured, indicating their dominance in Winter Olympic events, which is likely due to their climate and investment in Winter sports infrastructure."
    ]
   },
   {
@@ -1919,6 +2035,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Conclusions:\n",
+    "- **Higher Success with Fewer Participations**: Athletes with fewer participations often have a higher success rate, suggesting that elite athletes tend to perform well in their first few Olympic appearances.\n",
+    "\n",
+    "- **Gender Comparison**: The plot shows some variation between male and female athletes in terms of success rates, but overall, both genders exhibit a similar pattern where the success rate decreases as the number of participations increases.\n",
+    "\n",
+    "- **Elite Performance**: A small number of athletes maintain a high success rate even with multiple participations, indicating consistent elite performance across several Olympic Games."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Change in the Distribution of Sports in the Olympic Games Over Time, Segmented by Season\n",
     "\n"
    ]
@@ -1958,6 +2086,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Conclusions:\n",
+    "- **Growth in Sports**: Both the Summer and Winter Olympics have seen an increase in the number of sports over time, reflecting the expansion and diversification of the Games.\n",
+    "\n",
+    "- **Seasonal Differences**: The Summer Olympics consistently feature a larger number of sports compared to the Winter Olympics, which is likely due to the broader range of summer sports and events.\n",
+    "\n",
+    "- **Recent Trends**: In recent years, the number of sports in both seasons has stabilized, indicating a mature phase of the Olympic Games' evolution."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Significant Differences in the Number of Medals Won Between Male and Female Athletes, Segmented by Season\n"
    ]
   },
@@ -1986,6 +2126,16 @@
     "plt.xlabel(\"Gender\")\n",
     "plt.ylabel(\"Number of Medals\")\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conclusions:\n",
+    "- **Gender Participation**: The chart shows a higher overall number of medals won by male athletes compared to female athletes, reflecting historical trends in participation and opportunities in the Olympic Games.\n",
+    "\n",
+    "- **Seasonal Variation**: In both genders, more medals are won in the Summer Olympics than in the Winter Olympics, likely due to the larger number of events and sports in the Summer Games."
    ]
   }
  ],
